[gd_scene load_steps=20 format=2]

[ext_resource path="res://Assets/Player/Letter_D/Player_D.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Player_D/D_Idle3.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Player_D/D_Dash4.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprites/Player_D/D_Idle4.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Player_D/D_Run1.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Player_D/D_Idle1.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprites/Player_D/D_Dash3.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprites/Player_D/D_Run4.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/Player_D/D_Idle5.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/Player_D/D_Run2.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprites/Player_D/D_Idle2.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprites/Player_D/D_Dash2.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprites/Player_D/D_Run3.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprites/Player_D/D_Dash5.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprites/Player_D/D_Dash1.png" type="Texture" id=15]
[ext_resource path="res://Assets/SceneTransition.tscn" type="PackedScene" id=16]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 11 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 9 ) ],
"loop": true,
"name": "Idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 12 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 14 ) ],
"loop": true,
"name": "Dash",
"speed": 8.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 8 ) ],
"loop": true,
"name": "Walk",
"speed": 4.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.17892, 7.40411 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 6.06756, 7.73819 )

[node name="Player" type="KinematicBody2D" groups=[
"player",
]]
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.41421, -0.707108 )
shape = SubResource( 2 )

[node name="EnemyDetector" type="Area2D" parent="."]
position = Vector2( 8, 8 )
monitorable = false
collision_mask = 2147483664

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
position = Vector2( -6.58579, -8.70711 )
shape = SubResource( 3 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="DashTimer" type="Timer" parent="."]
one_shot = true

[node name="ColorRect" parent="." instance=ExtResource( 16 )]
visible = false
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
[connection signal="area_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_entered"]
[connection signal="area_shape_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_area_shape_entered"]
[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
